tests/basic/prim_05.pan

b80 : {v:bool|v=false}
b80 = true

c80 : {v:int|v=0}
c80 = 1

d80 : {v:string|v="goodbye"}
d80 = "hello"

----------------------------------------

b81 : {v:bool|v=true}
b81 = false

c81 : {v:int|v=1}
c81 = 0

d81 : {v:string|v="hello"}
d81 = "goodbye"

----------------------------------------

c82 : {v:int|v>1}
c82 = 1
